--- a/labtask1.html
+++ b/labtask1.html
@@ -4,11 +4,12 @@
 </head>
 <body>
         <h1 style="text-align:center;"> First HTML Site</h1>
+
         <a href="test.html" >Back </a>
 
         <table border="1"  width="100%" cellpadding="10">
             <tr>
-                <td width="20"
+                <td width="20%"
                 <h3>Links</h3>
                 <a href="page1.html"page-1</a><br>
                     <a href="page2.html">page-1</a>
